--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
-  margin: 0;
+  margin: 0%;
+  padding: 0%;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
