--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -3,16 +3,13 @@ header{
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-color: #284b63;
-    color: #d9d9d9;
-    /* padding: 1rem; */
 }
   
 .brand-title {
-  font-size: 35px;
-  line-height: 80px;
-  padding: 0 100px;
-  font-weight: bold;
+    color: #fff;
+    display: block;
+    font-size: 3.5rem;
+    padding: 25px 100px;
 }
   
 .navbar-links {
@@ -32,7 +29,6 @@ header{
 .navbar-links li a {
     display: block;
     text-decoration: none;
-    color: #d9d9d9;
     padding: 1rem;
 }
   
