--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -6,7 +6,7 @@ header{
 }
   
 .brand-title {
-    color: #fff;
+    color: #001858;
     display: block;
     font-size: 3.5rem;
     padding: 25px 100px;
@@ -30,6 +30,7 @@ header{
     display: block;
     text-decoration: none;
     padding: 1rem;
+    font-size: 1.2rem;
 }
   
 .toggle-button {
