--- a/src/componentes/Inicio/inicio.css
+++ b/src/componentes/Inicio/inicio.css
@@ -13,3 +13,15 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
 }
+
+.texto{
+    color: #001858;
+    font-size: 3rem;
+    margin-bottom: .8em;
+}
+.imagen{
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    max-width: 600px;
+}
