--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -1,15 +1,20 @@
+/* color: #001858; */
 header{
     display: flex;
     position: relative;
     justify-content: space-between;
     align-items: center;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 10px 0;
 }
   
 .brand-title {
     color: #001858;
     display: block;
     font-size: 3.5rem;
-    padding: 25px 100px;
+    /* padding: 25px 100px; */
 }
   
 .navbar-links {
@@ -21,7 +26,7 @@ header{
     margin: 0;
     padding: 0;
 }
-  
+
 .navbar-links li {
     list-style: none;
 }
@@ -29,8 +34,9 @@ header{
 .navbar-links li a {
     display: block;
     text-decoration: none;
+    color: #001858;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.4rem
 }
   
 .toggle-button {
@@ -50,7 +56,9 @@ header{
     width: 100%;
     background-color: white;
     border-radius: 10px;
+    transition: all .4s ease-in-out;
 }
+
   
 @media (max-width: 800px) {
     header {
