--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -41,7 +41,7 @@ header{
   
 .toggle-button {
     position: absolute;
-    top: 0.75rem;
+    top: 3.8rem;
     right: 1rem;
     display: none;
     flex-direction: column;
@@ -54,7 +54,7 @@ header{
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: white;
+    background-color: #001858;
     border-radius: 10px;
     transition: all .4s ease-in-out;
 }
