--- a/src/componentes/Inicio/inicio.css
+++ b/src/componentes/Inicio/inicio.css
@@ -47,4 +47,23 @@
     width: 100%;
     margin: 0 auto;
     max-width: 600px;
+    margin-left: 30px;
 }
+
+@media screen and (max-width: 1000px){
+    .imagen img{
+        width: 450px;
+        height: 450px;
+    }
+} 
+
+@media screen and (max-width: 620px){
+    .productive{
+        grid-template-columns: 1fr;
+    }
+
+    .imagen img{
+        display: none;
+    }
+} 
+ 
