--- a/src/componentes/Principal/Principal.css
+++ b/src/componentes/Principal/Principal.css
@@ -1,27 +1,30 @@
 .contenedorPrincipal{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     min-height: 100vh;
-    
+    padding: 30px 0; */
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0;
+    overflow: hidden;
 }
 
 main{
-    flex-grow: 1;
-    width: 90%;
-    max-width: 1500px;
+    color: #001858;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    margin: auto;
-    padding: auto;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 
 main .card{
-    width: 330px;
-    height: 350px;
-    /* width: 290px;
-    height: 335px; */
+    /* width: 330px;
+    height: 350px; */
+    width: 250px;
+    height: 335px;
+    background-color: #8BD3DD;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     overflow: hidden;
@@ -38,17 +41,24 @@ main .card:hover{
 main .card img{
     /* width: 330px;
     height: 220px; */
-    width: 220px;
-    height: 220px;
+    padding: 15px 0;
+    width: 200px;
+    height: 200px;
 }
 
 main .card h4{
     font-weight: 600;
-    color: #353535;
 }
 
 main .card a {
-    font-weight: 500;
+    font-weight: 600;
     text-decoration: none;
-    color: #3c6e71;
+    color: #F582AE;
 }
+
+/* @media screen and (max-width: 1280px){
+    main{
+        gap: 1em;
+        grid-template-columns: 1fr 1fr;
+    }
+} */
