--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -7,14 +7,22 @@ header{
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 10px 0;
+    padding: 25px 0;
 }
   
 .brand-title {
     color: #001858;
     display: block;
     font-size: 3.5rem;
+    font-weight: 650;
     /* padding: 25px 100px; */
+}
+.brand-title img{
+    margin-right: .1em;
+    vertical-align: middle;
+    margin-bottom: 7px;
+    width: 62px;
+    height: 62px;
 }
   
 .navbar-links {
