Estilos figuras 5%, redireccionamiento en el logo

--- a/src/componentes/Figuras/Figuras.css
+++ b/src/componentes/Figuras/Figuras.css
@@ -1,3 +1,11 @@
 .li1{
     color: red;
 }
+
+.figurasContainer{
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 0;
+    overflow: hidden;
+}
