--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -1,6 +1,50 @@
 .footer{
-    padding: 1rem;
-    background-color: #284b63;
-    color: #d9d9d9;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 25px 0;
 }
-  
+
+.brand-title {
+    color: #001858;
+    display: block;
+    font-size: 3.5rem;
+    font-weight: 650;
+    text-decoration: none;
+}
+.brand-title img{
+    margin-right: .1em;
+    vertical-align: middle;
+    margin-bottom: 7px;
+    width: 62px;
+    height: 62px;
+}
+
+.footer__social{
+    padding: 30px 0;
+    margin-top: 2em;
+    margin: 0 auto;
+}
+
+.footer__media{
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 28px;
+}
+
+.footer__media img{
+    width: 40px;
+    height: 40px;
+}
+
+.footer__media--last{
+    margin-right: 0;
+}
+
