--- a/src/componentes/Inicio/inicio.css
+++ b/src/componentes/Inicio/inicio.css
@@ -35,6 +35,7 @@
 .productive_cta{
     display: inline-block;
     background-color: #F582AE;
+    color: #001858;
     padding: 12px 25px;
     text-decoration: none;
     border-radius: 30px;
