--- a/src/componentes/Figuras/Figuras.css
+++ b/src/componentes/Figuras/Figuras.css
@@ -50,6 +50,7 @@
   cursor: pointer;
   border: none;
   margin-top: 3px;
+  margin-bottom: 15px;
 }
 
 .formFigura .gridForm{
@@ -75,6 +76,49 @@
   grid-column: span 2;
 }
 
+.formFigura .resultado{
+  background: #c7e67f;
+  padding: 20px 40px;
+  width: 80%;
+  margin: 0 auto;
+  position: relative;
+  border-radius: 4px;
+  border-left: 8px solid #3bb54a;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.formFigura .resultado span img{
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+}
+
+.formFigura .resultado .msg{
+  padding: 0 20px;
+  font-size: 18px;
+  color: #3bb54a;
+}
+
+.formFigura .resultado .close-btn{
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #3bb54a;
+  padding: 20px 18px;
+  cursor: pointer;
+}
+.formFigura .resultado .close-btn:hover{
+  background: #6e7068;
+}
+.formFigura .resultado .close-btn span{
+  color: #cbdfeb;
+  font-size: 22px;
+  line-height: 40px;
+}
 
 @media screen and (max-width: 800px){
   .subContenedorFiguras{
@@ -102,6 +146,16 @@
 
   .subContenedorFiguras{
     border-radius: 0px;
+  }
+  
+}
+
+@media screen and (max-width: 432px){
+
+  .formFigura .resultado .close-btn{
+    
+    display: none;
+    
   }
   
 }
