--- a/src/componentes/Figuras/Figuras.css
+++ b/src/componentes/Figuras/Figuras.css
@@ -79,13 +79,13 @@
 .formFigura .resultado{
   background: #c7e67f;
   padding: 20px 40px;
-  width: 80%;
   margin: 0 auto;
   position: relative;
   border-radius: 4px;
   border-left: 8px solid #3bb54a;
   overflow: hidden;
-  pointer-events: none;
+  display: none;
+  /* pointer-events: none; */
 }
 
 .formFigura .resultado span img{
@@ -112,7 +112,7 @@
   cursor: pointer;
 }
 .formFigura .resultado .close-btn:hover{
-  background: #6e7068;
+  background: #45d356;
 }
 .formFigura .resultado .close-btn span{
   color: #cbdfeb;
@@ -150,7 +150,7 @@
   
 }
 
-@media screen and (max-width: 432px){
+/* @media screen and (max-width: 432px){
 
   .formFigura .resultado .close-btn{
     
@@ -158,4 +158,4 @@
     
   }
   
-}
+} */
