--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,35 @@
-.App{
-    background: #FAEEDE;
+:root{
+    --pelorous-50: #f2fbfa;
+    --pelorous-100: #d2f5f3;
+    --pelorous-200: #a4ebe7;
+    --pelorous-300: #6fd9d8;
+    --pelorous-400: #3db7b9;
+    --pelorous-500: #27a1a5;
+    --pelorous-600: #1d7e84;
+    --pelorous-700: #1b656a;
+    --pelorous-800: #1a5155;
+    --pelorous-900: #1a4447;
 }
 
+.App{
+    /* background-image: linear-gradient(135deg, rgb(29, 126, 132) 0%, rgb(26, 81, 85) 100%); */
+    background-color: #FFFACE;
+    color: black;
+}
+.sub-container{
+    background-color: #2ABCC8;
+}
 /*Buscador*/
 
 .join{
-    color: #FAEEDE;
+    color: #2ABCC8;
     padding: 40px 0;
 }
 
 .join_container{
-    background-color: #8BD3DD;
-    box-shadow: 1px 1px 10px -5px rgb(255, 255, 255, .5);
-    border-radius: 12px;
+    background-color: #FFFACE;
+    padding: 15px 0;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
     padding-left: 1.5em;
     padding-right: 1.5em;
     text-align: center;
@@ -20,13 +37,8 @@
     margin: 0 auto;
 }
 
-.join_container h2{
-    padding-top: 14px;
-}
-
 .join_title{
     font-size: 2rem;
-    color: #001858;
 }
 
 .join_form{
@@ -37,12 +49,15 @@
 .join_input{
     padding: 15px 20px;
     font: inherit;
-    border-radius: 30px;
     outline: none;
     border: none;
     margin-bottom: 1.7em;
 }
 
+@media screen and (max-width: 800px){
+    .sub-container{
+    }
+}
 @media screen and (max-width: 410px){
     .join_container{
         width: 77%;
