--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -15,18 +15,18 @@ header a{
 }
   
 .brand-title {
-    color: #001858;
+    color: #2ABCC8;
     display: block;
-    font-size: 3.5rem;
+    font-size: 2.7rem;
     font-weight: 650;
     /* padding: 25px 100px; */
 }
 .brand-title img{
-    margin-right: .1em;
+    margin-left: .1em;
     vertical-align: middle;
     margin-bottom: 7px;
-    width: 62px;
-    height: 62px;
+    width: 72px;
+    height: 72px;
 }
   
 .navbar-links {
@@ -46,7 +46,7 @@ header a{
 .navbar-links li a {
     display: block;
     text-decoration: none;
-    color: #001858;
+    color: #2ABCC8;
     padding: 1rem;
     font-size: 1.4rem
 }
