--- a/src/componentes/Inicio/inicio.css
+++ b/src/componentes/Inicio/inicio.css
@@ -3,20 +3,22 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 30px 0;
+    padding-bottom: 180px;
     overflow: hidden;
 }
 
 .productive{
-    color: #001858;
-    display: grid;
+    color: #2ABCC8;
+    display: flex;
     gap: 3em;
-    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
     align-items: center;
 }
 
 .productive_title{
     font-size: 3rem;
-    margin-bottom: .8em;
+    margin-bottom: .1em;
+    line-height: 1;
 }
 
 .productive_paragraph{
@@ -24,50 +26,39 @@
     margin-bottom: 1em;
 }
 
-/* .productive_cta{
-    display: inline-block;
-    color: hsl(176, 68%, 64%);
-    line-height: 2.5;
-    text-decoration: none;
-    border-bottom: 1px solid hsl(176, 68%, 64%);
-} */
-
-.productive_cta{
-    display: inline-block;
-    background-color: #F582AE;
-    color: #001858;
-    padding: 12px 25px;
-    text-decoration: none;
-    border-radius: 30px;
-    font-size: 20px;
-    font-weight: 550;
-}
-
-.productive_arrow{
-    width: 30px;
-    margin-left: .1em;
-    vertical-align: middle;
-}
-
 
 .imagen{
-    display: block;
     width: 100%;
     margin: 0 auto;
     max-width: 600px;
     margin-left: 30px;
 }
 
+main{
+    position: relative;
+}
+
+.wave{
+    position: absolute;
+    bottom: -25px;
+}
+
 @media screen and (max-width: 1000px){
     .imagen img{
-        width: 450px;
-        height: 450px;
+        width: 90%;
+    }
+    .wave{
+        bottom: -1px;
+    }
+    .contenedorInicio{
+        padding-bottom: 140px;
     }
 } 
 
 @media screen and (max-width: 620px){
     .productive{
-        grid-template-columns: 1fr;
+       flex-direction: column;
+       gap: 1em;
     }
 
     .imagen img{
@@ -76,33 +67,53 @@
     .productive_text{
         order: 2;
     }
+    .contenedorInicio{
+        padding-bottom: 100px;
+    }
 } 
- 
-@media screen and (max-width: 575px){
-    .imagen img{
-        width: 400px;
-        height: 400px;
-    }
-}
 
-@media screen and (max-width: 500px){
-    .imagen img{
-        width: 350px;
-        height: 350px;
-    }
+.cta {
+    display: flex;
+    padding: 11px 33px;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    color: white;
+    background: #2ABCC8;
+    transition: 1s;
+    box-shadow: 6px 6px 0 #FE7AB6;
+    transform: skewX(-15deg);
+    border: none;
+    cursor: pointer;
+  }
+  
+  .cta:focus {
+    outline: none;
+  }
+  
+  .cta:hover {
+    transition: 0.5s;
+    box-shadow: 10px 10px 0 #F9DC08;
+  }
+  
+  .cta .second {
+    transition: 0.5s;
+    margin-right: 0px;
+  }
+  
+  .cta:hover  .second {
+    transition: 0.5s;
+    margin-right: 45px;
+  }
+  
+  .span {
+    transform: skewX(15deg)
+  }
+  
+.second {
+    width: 20px;
+    margin-left: 12px;
+    position: relative;
+    top: 12%;
 }
-
-@media screen and (max-width: 460px){
-    .imagen img{
-        width: 300px;
-        height: 300px;
-    }
-}
-
-@media screen and (max-width: 380px){
-    .imagen img{
-        width: 250px;
-        height: 250px;
-    }
-}
-
+  
