--- a/src/componentes/Principal/Principal.css
+++ b/src/componentes/Principal/Principal.css
@@ -20,19 +20,16 @@
 
 
 .mainPrincipal .card{
-    /* width: 330px;
-    height: 350px; */
     width: 250px;
-    height: 305px;
-    background-color: #8BD3DD;
-    border-radius: 8px;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    height: 290px;
+    background-color: #FFFACE;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
     overflow: hidden;
     margin: 20px;
     text-align: center;
     transition: all 0.25s;
     text-decoration: none;
-    color: #001858;
+    color: #2ABCC8;
     cursor: pointer;
 }
 
@@ -42,11 +39,9 @@
 }
 
 .mainPrincipal .card img{
-    /* width: 330px;
-    height: 220px; */
     padding: 22px 0;
-    width: 180px;
-    height: 180px;
+    width: 170px;
+    height: 170px;
 }
 
 /* main .card h4{
